# myflaskbase

./: .gitignore  README.md  pyproject.toml
myflaskbase/: __init__.py  app.py  config.py  extensions.py  models.py
myflaskbase/blueprints/user/: __init__.py  forms.py  models.py  services.py
myflaskbase/blueprints/user/views/: home_view.py  login_view.py  register_view.py
tests/: conftest.py  helper.py  test_app.py
